project('libopenmpt', 'cpp', default_options : ['cpp_std=c++17', 'warning_level=2'])

zlib_dep = dependency('zlib', fallback : ['zlib', 'zlib_dep'])
#vorbis_dep = dependency('vorbis', fallback : ['vorbis', 'vorbis_dep'])
vorbisfile_dep = dependency('vorbisfile', fallback : ['vorbis', 'vorbisfile_dep'])

inc_dirs = include_directories('libopenmpt', 'common', 'sounddsp', 'soundlib', 'openmpt123', 'src')

src_files = files(
    'common/ComponentManager.cpp',
    'common/Logging.cpp',
    'common/Profiler.cpp',
    'common/mptFileIO.cpp',
    'common/mptFileTemporary.cpp',
    'common/mptFileType.cpp',
    'common/mptPathString.cpp',
    'common/mptRandom.cpp',
    'common/mptStringBuffer.cpp',
    'common/mptTime.cpp',
    'common/serialization_utils.cpp',
    'common/version.cpp',
    'sounddsp/AGC.cpp',
    'sounddsp/DSP.cpp',
    'sounddsp/EQ.cpp',
    'sounddsp/Reverb.cpp',
    'soundlib/AudioCriticalSection.cpp',
    'soundlib/ContainerMMCMP.cpp',
    'soundlib/ContainerPP20.cpp',
    'soundlib/ContainerUMX.cpp',
    'soundlib/ContainerXPK.cpp',
    'soundlib/Dlsbank.cpp',
    'soundlib/Fastmix.cpp',
    'soundlib/ITCompression.cpp',
    'soundlib/ITTools.cpp',
    'soundlib/InstrumentExtensions.cpp',
    'soundlib/Load_667.cpp',
    'soundlib/Load_669.cpp',
    'soundlib/Load_amf.cpp',
    'soundlib/Load_ams.cpp',
    'soundlib/Load_c67.cpp',
    'soundlib/Load_dbm.cpp',
    'soundlib/Load_digi.cpp',
    'soundlib/Load_dmf.cpp',
    'soundlib/Load_dsm.cpp',
    'soundlib/Load_dsym.cpp',
    'soundlib/Load_dtm.cpp',
    'soundlib/Load_far.cpp',
    'soundlib/Load_fmt.cpp',
    'soundlib/Load_gdm.cpp',
    'soundlib/Load_gt2.cpp',
    'soundlib/Load_imf.cpp',
    'soundlib/Load_it.cpp',
    'soundlib/Load_itp.cpp',
    'soundlib/Load_mdl.cpp',
    'soundlib/Load_med.cpp',
    'soundlib/Load_mid.cpp',
    'soundlib/Load_mo3.cpp',
    'soundlib/Load_mod.cpp',
    'soundlib/Load_mt2.cpp',
    'soundlib/Load_mtm.cpp',
    'soundlib/Load_mus_km.cpp',
    'soundlib/Load_okt.cpp',
    'soundlib/Load_plm.cpp',
    'soundlib/Load_psm.cpp',
    'soundlib/Load_ptm.cpp',
    'soundlib/Load_s3m.cpp',
    'soundlib/Load_sfx.cpp',
    'soundlib/Load_stm.cpp',
    'soundlib/Load_stp.cpp',
    'soundlib/Load_symmod.cpp',
    'soundlib/Load_uax.cpp',
    'soundlib/Load_ult.cpp',
    'soundlib/Load_wav.cpp',
    'soundlib/Load_xm.cpp',
    'soundlib/Load_xmf.cpp',
    'soundlib/MIDIEvents.cpp',
    'soundlib/MIDIMacros.cpp',
    'soundlib/MPEGFrame.cpp',
    'soundlib/Message.cpp',
    'soundlib/MixFuncTable.cpp',
    'soundlib/MixerLoops.cpp',
    'soundlib/MixerSettings.cpp',
    'soundlib/ModChannel.cpp',
    'soundlib/ModInstrument.cpp',
    'soundlib/ModSample.cpp',
    'soundlib/ModSequence.cpp',
    'soundlib/OPL.cpp',
    'soundlib/OggStream.cpp',
    'soundlib/Paula.cpp',
    'soundlib/RowVisitor.cpp',
    'soundlib/S3MTools.cpp',
    'soundlib/SampleFormatBRR.cpp',
    'soundlib/SampleFormatFLAC.cpp',
    'soundlib/SampleFormatMediaFoundation.cpp',
    'soundlib/SampleFormatMP3.cpp',
    'soundlib/SampleFormatOpus.cpp',
    'soundlib/SampleFormatSFZ.cpp',
    'soundlib/SampleFormatVorbis.cpp',
    'soundlib/SampleFormats.cpp',
    'soundlib/SampleIO.cpp',
    'soundlib/Snd_flt.cpp',
    'soundlib/Snd_fx.cpp',
    'soundlib/Sndfile.cpp',
    'soundlib/Sndmix.cpp',
    'soundlib/SoundFilePlayConfig.cpp',
    'soundlib/Tables.cpp',
    'soundlib/Tagging.cpp',
    'soundlib/TinyFFT.cpp',
    'soundlib/UMXTools.cpp',
    'soundlib/UpgradeModule.cpp',
    'soundlib/WAVTools.cpp',
    'soundlib/WindowedFIR.cpp',
    'soundlib/XMTools.cpp',
    'soundlib/load_j2b.cpp',
    'soundlib/mod_specifications.cpp',
    'soundlib/modcommand.cpp',
    'soundlib/modsmp_ctrl.cpp',
    'soundlib/pattern.cpp',
    'soundlib/patternContainer.cpp',
    'soundlib/tuning.cpp',
    'soundlib/tuningCollection.cpp',
    'soundlib/plugins/dmo/Chorus.cpp',
    'soundlib/plugins/dmo/Compressor.cpp',
    'soundlib/plugins/dmo/Distortion.cpp',
    'soundlib/plugins/dmo/DMOPlugin.cpp',
    'soundlib/plugins/dmo/DMOUtils.cpp',
    'soundlib/plugins/dmo/Echo.cpp',
    'soundlib/plugins/dmo/Flanger.cpp',
    'soundlib/plugins/dmo/Gargle.cpp',
    'soundlib/plugins/dmo/I3DL2Reverb.cpp',
    'soundlib/plugins/dmo/ParamEq.cpp',
    'soundlib/plugins/dmo/WavesReverb.cpp',
    'soundlib/plugins/DigiBoosterEcho.cpp',
    'soundlib/plugins/LFOPlugin.cpp',
    'soundlib/plugins/PluginManager.cpp',
    'soundlib/plugins/PlugInterface.cpp',
    'soundlib/plugins/SymMODEcho.cpp',
    'libopenmpt/libopenmpt_c.cpp', 'libopenmpt/libopenmpt_cxx.cpp', 'libopenmpt/libopenmpt_ext_impl.cpp', 'libopenmpt/libopenmpt_impl.cpp')

libopenmpt = library('openmpt', src_files,
                     include_directories : inc_dirs,
                     dependencies : [zlib_dep, vorbisfile_dep],
                     cpp_args : ['-DMPT_WITH_OGG', '-DMPT_WITH_VORBIS', '-DMPT_WITH_VORBISFILE', '-DMPT_WITH_ZLIB', '-DMPT_BUILD_VCPKG', '-DLIBOPENMPT_BUILD'],
                     install : true)
pkgconfig = import('pkgconfig')
pkgconfig.generate(libopenmpt,
                    name : 'libopenmpt',
                    description : 'Module player library based on OpenMPT -- libopenmpt',
                    version : meson.project_version(),
                    requires_private : 'zlib, vorbis, vorbisfile')

openmpt_dep = declare_dependency(link_with : libopenmpt, include_directories : inc_dirs)
